# sentry-sdk-r

./: DESCRIPTION  LICENSE  NAMESPACE  README.md
R/: extendr-wrappers.R  sentry.R
man/: sentry_attach_lgr.Rd  sentry_capture_log.Rd  sentry_capture_message.Rd  sentry_clear_current_span.Rd  sentry_close.Rd  sentry_enabled.Rd  sentry_flush.Rd  sentry_init.Rd  sentry_initialize.Rd  sentry_lgr_appender.Rd  sentry_logs_enabled.Rd  sentry_plumber_instrument.Rd  sentry_set_current_span.Rd  sentry_span_finish.Rd  sentry_span_start_child.Rd  sentry_transaction_start.Rd  with_sentry_span.Rd  with_sentry_transaction.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  sentry.sdk-win.def
src/rust/: Cargo.toml  document.rs
src/rust/src/: lib.rs
