[package]
name = 'sentry_sdk'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'sentry_sdk'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9.0'
sentry = "=0.46.2"

[profile.release]
lto = true
codegen-units = 1
