[package]
name = 'sentry_sdk'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.81'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'sentry_sdk'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9.0'
sentry = { version = "=0.46.2", default-features = false, features = ["backtrace", "contexts", "logs", "panic", "reqwest", "rustls"] }

[profile.release]
lto = true
codegen-units = 1
